Refactoring code into UML design (Still some issues with clearTile related method)